# transportation

./: .gitignore  docker-compose.yml  pyproject.toml
shipping/: admin.py  api_utils.py  filters.py  forms.py  models.py  urls.py  views.py
shipping/migrations/: 0001_initial.py  0002_order_status.py  0003_cargotype_image_service_image_vehicle_image.py
templates/: base.html
templates/api/: weather_info.html
templates/orders/: order_confirm_delete.html  order_form.html  order_list.html
templates/register/: login.html  register.html
templates/shipping/: driver_dashboard.html  driver_schedule.html  home.html  public_info.html  register_driver.html  services_list.html  vehicles_list.html
transportation/: asgi.py  models.py  settings.py  urls.py
