[tool.poetry]
name = "transportation"
version = "0.1.0"
description = ""
authors = ["Angelina <angst2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
