[tool.poetry]
name = "transportation"
version = "0.1.0"
description = ""
authors = ["Angelina <angst2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
django-filter = "^24.3"
psycopg2-binary = "^2.9.10"
config = "^0.5.1"
requests = "^2.32.3"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
